fix projects layout and possibly x-overflow on safari...

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     outline: none; 
 }
 
+html, body{
+    overflow-x: hidden;
+}
+
 .section-padding { 
     padding-left: 20px; padding-right: 20px; 
 }
@@ -590,12 +594,16 @@ h3 {
     bottom: 0%;
     margin-top: auto;
 }
+.project-last{
+    margin: 0 auto;
+}
 
 #projects-list {
     display: flex; 
     width: 100%; 
-    height: fit-content; 
+    /* height: fit-content;  */
     align-items: stretch;
+    flex-wrap: wrap;
 }
 
 /* Style Classic - Image above project description */
